# branefrick

./: .gitignore  README.md  branefrick.opam  dune-project  flake.nix  shell.nix
lib/: dune  evalbf.ml  parsebf.ml
test/: dune
